--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,14 @@
     <color name="barberSignInButtonColor">#000</color>
     <color name="customerSignInButtonColor">#000</color>
 
+    <color name="editVectorColor">#0FFF23</color>
+
+    <color name="toolbarColorOfProfieActivity">#008744</color>
+
+
+    <color name="google_green">#008744</color>
+    <color name="google_yellow">#ffa700</color>
+    <color name="google_red">#d62d20</color>
+    <color name="google_blue">#0057e7</color>
+
 </resources>
