--- a/app/src/main/res/layout/activity_barber_profile.xml
+++ b/app/src/main/res/layout/activity_barber_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,15 @@
     tools:context=".BarberProfileActivity">
 
 
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        app:menu="@menu/bottom_navigation"
+        android:background="?android:attr/windowBackground"
+        android:layout_height="wrap_content">
+
+    </android.support.design.widget.BottomNavigationView>
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarprofileActivity"
         android:layout_width="match_parent"
@@ -15,6 +24,8 @@
         android:background="@color/colorPrimary" />
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_below="@+id/toolbarprofileActivity"
         android:layout_width="match_parent"
         android:background="@android:color/holo_green_dark"
         app:cardBackgroundColor="@android:color/darker_gray"
@@ -191,6 +202,13 @@
 
 
     </LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:id="@+id/fragment_container"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/cardView"
+        android:layout_above="@+id/bottom_navigation_bar"
+        ></FrameLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
